--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
-    "rxjs": "^6.0.0",
-    "vue": "^3.0.0",
-    "vue-rx": "^6.2.0"
+    "mobx": "^6.3.2",
+    "mobx-vue": "^2.0.11",
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
